# Crypto-Trading-Simulator

./: .gitignore  PLAN.md  README.md  SETUP.md  docker-compose.yml
.github/workflows/: build-and-test.yml
backend/: Dockerfile  main.py  market_simulator.py  requirements.txt  schemas.py  trade_engine.py  trading_service.py
benchmarks/: plot_results.py  sma_benchmark.py
cpp_core/: CMakeLists.txt  setup.py
cpp_core/include/: engine.hpp
cpp_core/src/: bindings.cpp  engine.cpp
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/components/: OrderBook.module.css  OrderBook.tsx  PriceChart.tsx  TradingPanel.module.css  TradingPanel.tsx
frontend/hooks/: useWebSocket.ts
frontend/styles/: globals.css
frontend/types/: api.ts
tests/cpp/: test_engine.cpp
tests/python/: conftest.py  test_api.py
